test/invalid/undefined_variable.py
# Reference to undefined variable
def main() -> None:
    y: int = x + 1
    print(y)
